--- a/GDSB.UI2/Properties/Resources.resx
+++ b/GDSB.UI2/Properties/Resources.resx
@@ -127,6 +127,12 @@
   <data name="PasswordView" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\PasswordView.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="STAR" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\STAR.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="star_cinza" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\star cinza.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Visualizar_senha" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Visualizar senha.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
