--- a/GDSB.UI2/Properties/Resources.resx
+++ b/GDSB.UI2/Properties/Resources.resx
@@ -118,6 +118,15 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="Heart_Colorless" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Heart Colorless.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Heart_effect_like" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Heart effect like.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Heart_Like" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Heart Like.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="icone_senha" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icone senha.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
